buildscript {
	ext {
		queryDslVersion = "5.0.0"
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.krince'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j' //mysql
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' //jwt
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5' //jwt
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' //jwt
	implementation "com.amazonaws:aws-java-sdk-s3:1.12.281"
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta' //querydsl
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security' //security
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0' //swagger
	implementation 'org.springframework.boot:spring-boot-starter-validation' //validation
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test' //security test
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "jakarta.annotation:jakarta.annotation-api" //querydsl
	annotationProcessor "jakarta.persistence:jakarta.persistence-api" //querydsl
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta" //querydsl
}

def generated = 'src/main/generated' // Querydsl 설정부

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile) {
	options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// java source set 에 querydsl QClass 위치 추가
sourceSets {
	main.java.srcDirs += [ generated ]
}

// gradle clean 시에 QClass 디렉토리 삭제
clean {
	delete file(generated)
}

tasks.named('test') {
	useJUnitPlatform()
}
